tests/error/misc_errors/unsupported_const.py
from tests.util import compile_guppy


@compile_guppy
def foo() -> None:
    x = -2j
