tests/error/misc_errors/unsupported_const.err
Error: Unsupported constant (at $FILE:6:9)
  | 
4 | @compile_guppy
5 | def foo() -> None:
6 |     x = -2j
  |          ^^ Type `complex` is not supported

Guppy compilation failed due to 1 previous error
